tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/us-after-oct.stderr
TOML parse error at line 1, column 18
  |
1 | us-after-oct = 0o_1
  |                  ^
invalid octal integer
